--- a/views/home.ejs
+++ b/views/home.ejs
@@ -11,13 +11,20 @@
             <label for="book_name">Book Name</label>
             <input type="text" class="form-control" id="book_name" name="s[book]" placeholder="Book Name">
         </div>
-        <div class="form-group">
-            <label for="issue_date">Issued date</label>
-            <input type="date" id="issue_date" class="form-control" name="s[issue_date]" placeholder="Issued Date">
-        </div>
-        <div class="form-group">
-            <label for="return_date">Return date</label>
-            <input type="date" id="return_date" class="form-control" name="s[return_date]" placeholder="Issued Date">
+<!-- Added bootstrap grid for issue_date and return_date -->
+        <div class="row">
+          <div class="col-sm-6">
+            <div class="form-group">
+                <label for="issue_date">Issued date</label>
+                <input type="date" id="issue_date" class="form-control" name="s[issue_date]" placeholder="Issued Date">
+            </div>
+          </div>
+          <div class="col-sm-6">
+            <div class="form-group">
+                <label for="return_date">Return date</label>
+                <input type="date" id="return_date" class="form-control" name="s[return_date]" placeholder="Issued Date">
+            </div>
+          </div>
         </div>
         <button type="submit" class="btn btn-primary">Submit</button>
     </form>
