--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -7,7 +7,7 @@
     <!-- Bootstrap MDN CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <!-- Bootstrap Local CSS -->
-    <link rel="stylesheet" href="../stylesheets/bootstrap.min.css"> %>
+    <!-- <link rel="stylesheet" href="../stylesheets/bootstrap.min.css"> %> -->
     <link rel="stylesheet" href="../stylesheets/style.css">
     <title>Library Management</title>
 </head>
